--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             var n2 = Number(v2.value);
             var resultado = n1 + n2;
 
-            resp.innerHTML = `O dano causado foi ${n1} + ${n2} =  -${resultado} Hp. `
+            resp.innerHTML = `O dano causado foi ${n1} + ${n2} =  ${resultado} Hp. `
         }
 
 
